--- a/src/main/resources/ViewController/help.html
+++ b/src/main/resources/ViewController/help.html
@@ -19,7 +19,52 @@
         <h3>Keyboard-Shortcuts</h3>
 
         <div>
-            <p>Bla bla bla Shortcuts</p>
+            <table class="table table-hover">
+                <tr>
+                    <th>Shortcut</th>
+                    <th>Funktion</th>
+                </tr>
+                <tr>
+                    <td>Ctrl+Alt+N</td>
+                    <td>Erstellt ein neues Adressbuch</td>
+                </tr>
+                <tr>
+                    <td>Ctrl+Alt+O</td>
+                    <td>Öffnet ein Adressbuch</td>
+                </tr>
+                <tr>
+                    <td>Ctrl+Q</td>
+                    <td>Beendet die Anwendung</td>
+                </tr>
+                <tr>
+                    <td>Ctrl+N</td>
+                    <td>Erstellt einen neuen Kontakt</td>
+                </tr>
+                <tr>
+                    <td>Ctrl+E</td>
+                    <td>Editiert den aktuell ausgwählten Kontakt</td>
+                </tr>
+                <tr>
+                    <td>Ctrl+D</td>
+                    <td>Löscht den aktuell ausgewählten Kontakt</td>
+                </tr>
+                <tr>
+                    <td>Ctrl+Shift+S</td>
+                    <td>Speichert das aktuelle Adressbuch mit Passwort-Verschlüsselung</td>
+                </tr>
+                <tr>
+                    <td>Ctrl+Shift+O</td>
+                    <td>Öffnet ein verschlüsseltes Adressbuch</td>
+                </tr>
+                <tr>
+                    <td>Ctrl+A</td>
+                    <td>Öffnet das About-Fenster</td>
+                </tr>
+                <tr>
+                    <td>F1</td>
+                    <td>Öffnet diese Hilfe</td>
+                </tr>
+            </table>
         </div>
         <h3>Adressbuch-Verschlüsselung</h3>
 
