--- a/src/main/resources/ViewController/about.html
+++ b/src/main/resources/ViewController/about.html
@@ -12,7 +12,7 @@
     <div class="jumbotron">
         <h1>About</h1>
 
-        <p>Über die Macher und die Software</p>
+        p>Über die Macher und die Software</p> <!-- TODO: irgendwas dazu schreiben-->
     </div>
 </div>
 
