--- a/src/main/resources/ViewController/help.html
+++ b/src/main/resources/ViewController/help.html
@@ -69,7 +69,7 @@
         <h3>Adressbuch-Verschlüsselung</h3>
 
         <div>
-            <p>irgendwas über Verschlüsselung</p>
+            <p>irgendwas über Verschlüsselung</p> <!-- TODO: irgendwas über Verschlüsselung dazu schreiben-->
         </div>
     </div>
 </div>
