--- a/src/main/resources/ViewController/help.html
+++ b/src/main/resources/ViewController/help.html
@@ -66,10 +66,22 @@
                 </tr>
             </table>
         </div>
-        <h3>Adressbuch-Verschlüsselung</h3>
+        <h3>Adressbuch verschlüsselt speichern</h3>
 
         <div>
+            <p>Die Verschlüsselung des Adressbuchs basiert auf AES128. Der Einfachheit halber wird ein statisches
+                Salt verwendet.</p>
+
+            <p>Um ein Adressbuch verschlüsselt abspeichern zu können muss ein Adressbuch in der Anwendung geöffnet
+                sein. Anschließend wird das Passwort (inkl. Wiederholung)
+                und ein Speicherort für die verschlüsselte Datei festgelegt.</p>
+
             <p>irgendwas über Verschlüsselung</p> <!-- TODO: irgendwas über Verschlüsselung dazu schreiben-->
+        </div>
+        <h3>Verschlüsseltes Adressbuch öffnen</h3>
+
+        <div>
+            <p>irgenwas übers öffnen</p>
         </div>
     </div>
 </div>
