--- a/src/main/resources/ViewController/help.html
+++ b/src/main/resources/ViewController/help.html
@@ -66,23 +66,27 @@
                 </tr>
             </table>
         </div>
-        <h3>Adressbuch verschlüsselt speichern</h3>
+        <h3>Über die Verschlüsselung</h3>
 
         <div>
             <p>Die Verschlüsselung des Adressbuchs basiert auf AES128. Der Einfachheit halber wird ein statisches
-                Salt verwendet.</p>
+                Salt verwendet.Die Anzahl der Runden zur Verschlüsselung beträgt 65535.</p>
+        </div>
+        <h3>Adressbuch verschlüsselt speichern</h3>
 
+        <div>
             <p>Um ein Adressbuch verschlüsselt abspeichern zu können muss ein Adressbuch in der Anwendung geöffnet
                 sein. Anschließend wird das Passwort (inkl. Wiederholung)
                 und ein Speicherort für die verschlüsselte Datei festgelegt.</p>
-
-            <p>irgendwas über Verschlüsselung</p> <!-- TODO: irgendwas über Verschlüsselung dazu schreiben-->
         </div>
         <h3>Verschlüsseltes Adressbuch öffnen</h3>
 
         <div>
-            <p>irgenwas übers öffnen</p>
+            <p><!-- TODO irgendwas übers öffnen --></p>
         </div>
+        <h3>Kontakt-Verwaltung</h3>
+
+        <div><!-- TODO Kontakt-Verwaltung erklären --></div>
     </div>
 </div>
 
