--- a/src/main/resources/ViewController/HTML-Content/about.html
+++ b/src/main/resources/ViewController/HTML-Content/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
+<head lang="de">
     <meta charset="UTF-8">
     <title>About</title>
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -12,7 +12,7 @@
     <div class="jumbotron">
         <h1>About</h1>
 
-        p>Über die Macher und die Software</p> <!-- TODO: irgendwas dazu schreiben-->
+        p>Über die Entwickler und die Software</p> <!-- TODO: irgendwas dazu schreiben-->
     </div>
 </div>
 
