--- a/src/main/resources/ViewController/HTML-Content/help.html
+++ b/src/main/resources/ViewController/HTML-Content/help.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
+<head lang="de">
     <meta charset="UTF-8">
     <title>Hilfe</title>
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="../css/smoothness/jquery-ui-1.10.4.min.css" rel="stylesheet">
+    <link href="../../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="../../css/smoothness/jquery-ui-1.10.4.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container" role="main">
@@ -90,9 +90,9 @@
     </div>
 </div>
 
-<script src="../js/jquery-1.11.1.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-<script src="../js/jquery-ui-1.10.4.min.js"></script>
+<script src="../../js/jquery-1.11.1.min.js"></script>
+<script src="../../js/bootstrap.min.js"></script>
+<script src="../../js/jquery-ui-1.10.4.min.js"></script>
 <script>
     $(function () {
         $("#helpAccordion").accordion();
