--- a/src/main/resources/ViewController/HTML-Content/Doku.html
+++ b/src/main/resources/ViewController/HTML-Content/Doku.html
@@ -6,7 +6,8 @@
     <link href="../../css/bootstrap.min.css" rel="stylesheet">
     <link href="../../css/smoothness/jquery-ui-1.10.4.min.css" rel="stylesheet">
     <link href="../../css/dashboard/dashboard.css" rel="stylesheet">
-    <link href="../../css/highlightStyles/monokai_sublime.css" rel="stylesheet">
+    <link href="../../css/syntaxHighlighter/shCoreRDark.css" rel="stylesheet">
+    <link href="../../css/syntaxHighlighter/shThemeRDark.css" rel="stylesheet">
 </head>
 <body>
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -62,9 +63,13 @@
 <script src="../../js/jquery-1.11.1.min.js"></script>
 <script src="../../js/bootstrap.min.js"></script>
 <script src="../../js/jquery-ui-1.10.4.min.js"></script>
-<script src="../../js/highlight.pack.js"></script>
+<script src="../../js/shCore.js"></script>
+<script src="../../js/shBrushJava.js"></script>
+<script src="../../js/shBrushJavaFX.js"></script>
+<script src="../../js/shBrushXml.js"></script>
 <script>
     $(document).ready(function () {
+        SyntaxHighlighter.highlight();
         $('#load_contactClass').on('click', function () {
             $(this).parent().addClass('active').siblings().removeClass('active');
             $('#content').load('DokuPages/Contact.html');
