--- a/src/main/resources/ViewController/HTML-Content/Doku.html
+++ b/src/main/resources/ViewController/HTML-Content/Doku.html
@@ -34,23 +34,25 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
+            <h4>Model</h4>
             <ul class="nav nav-sidebar">
                 <li><a href="#" id="load_contactClass">Contact</a></li>
                 <li><a href="#">ContactList</a></li>
                 <li><a href="#">ContactNumberList</a></li>
                 <li><a href="#">ContactNumberType</a></li>
             </ul>
+            <h4>ViewController</h4>
             <ul class="nav nav-sidebar">
-                <li><a href="">Nav item</a></li>
-                <li><a href="">Nav item again</a></li>
-                <li><a href="">One more nav</a></li>
-                <li><a href="">Another nav item</a></li>
-                <li><a href="">More navigation</a></li>
+                <li><a href="#">MainController</a></li>
+                <li><a href="#">CreateEditController</a></li>
+                <li><a href="#">HelpAboutController</a></li>
+                <li><a href="#">MainController</a></li>
+                <li><a href="#">OpenEncryptedController</a></li>
+                <li><a href="#">SaveEncryptedController</a></li>
             </ul>
+            <h4>BusinessLogic</h4>
             <ul class="nav nav-sidebar">
-                <li><a href="">Nav item again</a></li>
-                <li><a href="">One more nav</a></li>
-                <li><a href="">Another nav item</a></li>
+                <li><a href="">BlContacts</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" id="content">
