JUnit-Tests in die Doku aufgenommen

--- a/src/main/resources/ViewController/HTML-Content/Doku.html
+++ b/src/main/resources/ViewController/HTML-Content/Doku.html
@@ -26,6 +26,7 @@
                 <li><a href="#">Klassen</a></li>
                 <li><a href="#">Interfaces</a></li>
                 <li><a href="#">GUI</a></li>
+                <li><a href="#">JUnit-Tests</a></li>
             </ul>
         </div>
     </div>
