Neuen Kontakt anlegen implementiert, Hilfe weiter vervollständigt

--- a/src/main/resources/ViewController/HTML-Content/help.html
+++ b/src/main/resources/ViewController/HTML-Content/help.html
@@ -12,7 +12,7 @@
     <div class="jumbotron">
         <h1>Hilfe</h1>
 
-        <p>Alles was man über das Adressbuch wissen muss</p>
+        <p>Alles was man &uuml;ber das Adressbuch wissen muss</p>
     </div>
 
     <div id="helpAccordion">
@@ -30,7 +30,7 @@
                 </tr>
                 <tr>
                     <td>Ctrl+Alt+O</td>
-                    <td>Öffnet ein Adressbuch</td>
+                    <td>&Ouml;ffnet ein Adressbuch</td>
                 </tr>
                 <tr>
                     <td>Ctrl+Q</td>
@@ -42,51 +42,65 @@
                 </tr>
                 <tr>
                     <td>Ctrl+E</td>
-                    <td>Editiert den aktuell ausgwählten Kontakt</td>
+                    <td>Editiert den aktuell ausgw&auml;hlten Kontakt</td>
                 </tr>
                 <tr>
                     <td>Ctrl+D</td>
-                    <td>Löscht den aktuell ausgewählten Kontakt</td>
+                    <td>L&ouml;scht den aktuell ausgew&auml;hlten Kontakt</td>
                 </tr>
                 <tr>
                     <td>Ctrl+Shift+S</td>
-                    <td>Speichert das aktuelle Adressbuch mit Passwort-Verschlüsselung</td>
+                    <td>Speichert das aktuelle Adressbuch mit Passwort-Verschl&uuml;sselung</td>
                 </tr>
                 <tr>
                     <td>Ctrl+Shift+O</td>
-                    <td>Öffnet ein verschlüsseltes Adressbuch</td>
+                    <td>&Ouml;ffnet ein verschl&uuml;sseltes Adressbuch</td>
                 </tr>
                 <tr>
                     <td>Ctrl+A</td>
-                    <td>Öffnet das About-Fenster</td>
+                    <td>&Ouml;ffnet das About-Fenster</td>
                 </tr>
                 <tr>
                     <td>F1</td>
-                    <td>Öffnet diese Hilfe</td>
+                    <td>&Ouml;ffnet diese Hilfe</td>
                 </tr>
             </table>
         </div>
-        <h3>Über die Verschlüsselung</h3>
+        <h3>&Uuml;ber die Verschl&uuml;sselung</h3>
 
         <div>
-            <p>Die Verschlüsselung des Adressbuchs basiert auf AES128. Der Einfachheit halber wird ein statisches
-                Salt verwendet.Die Anzahl der Runden zur Verschlüsselung beträgt 65535.</p>
+            <p>Die Verschl&uuml;sselung des Adressbuchs basiert auf AES128. Der Einfachheit halber wird ein statisches
+                Salt verwendet.Die Anzahl der Runden zur Verschl&uuml;sselung betr&auml;gt 65535.</p>
         </div>
-        <h3>Adressbuch verschlüsselt speichern</h3>
+        <h3>Adressbuch verschl&uuml;sselt speichern</h3>
 
         <div>
-            <p>Um ein Adressbuch verschlüsselt abspeichern zu können muss ein Adressbuch in der Anwendung geöffnet
-                sein. Anschließend wird das Passwort (inkl. Wiederholung)
-                und ein Speicherort für die verschlüsselte Datei festgelegt.</p>
+            <p>Um ein Adressbuch verschl&uuml;sselt abspeichern zu k&ouml;nnen <b>muss</b> ein Adressbuch in der
+                Anwendung ge&ouml;ffnet
+                sein. Anschlie&szlig;end geht man wie folgt vor:</p>
+            <ol>
+                <li>Sicheres Passwort w&auml;en und 2x eingeben</li>
+                <li>Pfad w&auml;hlen in welchem die verschl&uuml;sselte Datei abgelegt werden soll</li>
+                <li>Best&auml;tigen</li>
+            </ol>
         </div>
-        <h3>Verschlüsseltes Adressbuch öffnen</h3>
+        <h3>Verschl&uuml;sseltes Adressbuch &ouml;ffnen</h3>
 
         <div>
-            <p><!-- TODO irgendwas übers öffnen --></p>
+            <p>Um ein verschl&uuml;sseltes Adressbuch zu &ouml;ffnen geht man wie folgt vor:</p>
+            <ol>
+                <li>Passwort f&uuml;r die Entschl&uuml;sselung angeben</li>
+                <li>Pfad zur verschl&uuml;sselten Datei angeben</li>
+                <li>Pfad angeben in welchem die entschl&uuml;sselte Datei abgelegt werden soll</li>
+                <li>Best&auml;tigen</li>
+            </ol>
         </div>
         <h3>Kontakt-Verwaltung</h3>
 
-        <div><!-- TODO Kontakt-Verwaltung erklären --></div>
+        <div><p>Um Kontakte anlegen zu k&ouml;nnen muss entweder ein Adressbuch ge&ouml;ffnet oder erstellt werden.
+            Anschlie&szlig;end wird das Men&uuml; zur Kontaktverwaltung aktiviert und es k&ouml;nnen neue Kontakte
+            angelegt und vorhandene
+            gel&ouml;scht oder bearbeitet.</p></div>
     </div>
 </div>
 
