Kommentare nachgepflegt, bisschen aufgeräumt

--- a/src/main/resources/ViewController/HTML-Content/help.html
+++ b/src/main/resources/ViewController/HTML-Content/help.html
@@ -79,7 +79,7 @@
                 Anwendung ge&ouml;ffnet
                 sein. Anschlie&szlig;end geht man wie folgt vor:</p>
             <ol>
-                <li>Sicheres Passwort w&auml;en und 2x eingeben</li>
+                <li>Sicheres Passwort w&auml;hlen und 2x eingeben</li>
                 <li>Pfad w&auml;hlen in welchem die verschl&uuml;sselte Datei abgelegt werden soll</li>
                 <li>Best&auml;tigen</li>
             </ol>
